Require Jenkins 2.479.1 or newer and Jakarta EE 9 (#278)